<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.ke.siundu254.betshwari.ui.RegularActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/daily_bonus_tips"
        android:id="@+id/regularTipsTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regularTipsTitle"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:text="@string/hi_there_i_m_using_bet_shwari"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:typeface="serif"
        android:id="@+id/regularTipsStatus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/regularTipsStatus"
        android:layout_marginTop="20dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginEnd="7dp"
        android:typeface="serif"
        android:textSize="19sp"
        android:singleLine="false"
        android:text="@string/app_name"
        android:id="@+id/regularTipsList"/>

    <com.google.android.gms.ads.AdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/adView_Regular"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>
