<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardElevation="7dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_marginTop="5dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:text="@string/daily_bonus_tips"
                android:id="@+id/single_regular_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_below="@+id/single_regular_title"
                android:layout_alignStart="@+id/single_regular_title"
                android:layout_alignLeft="@+id/single_regular_title"
                android:text="@string/hi_there_i_m_using_bet_shwari"
                android:id="@+id/single_regular_status"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_below="@+id/single_regular_status"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="7dp"
                android:layout_marginEnd="7dp"
                android:text="@string/_01_jan_2017_05_15"
                android:id="@+id/single_regular_date"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>